--- a/res/layout/message_r.xml
+++ b/res/layout/message_r.xml
@@ -4,15 +4,35 @@
     android:layout_height="wrap_content"
     android:gravity="right" >
 
-    <TextView
-        android:focusable="false"
-        android:id="@+id/chatView_r"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="right"
         android:layout_margin="20dp"
         android:background="@drawable/bubble_r"
-        android:gravity="center"
-        android:padding="20dp"
-        android:text="MC" />
+        android:orientation="vertical"
+        android:paddingBottom="13dp" >
+
+        <TextView
+            android:id="@+id/chatView_r"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="0dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="10dp"
+            android:text="MC" />
+
+        <TextView
+            android:id="@+id/ttime_r"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="0dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:paddingTop="5dp"
+            android:text="MC"
+            android:textSize="10sp" />
+    </LinearLayout>
 
 </LinearLayout>
