--- a/res/layout/picture_r.xml
+++ b/res/layout/picture_r.xml
@@ -1,30 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bubble_r"
-    android:layout_gravity="right"
-    android:paddingBottom="20dp"
     android:layout_margin="20dp"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingBottom="20dp" >
 
-    <ImageView
-        android:id="@+id/picture_r"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
-        android:layout_margin="20dp"
-        android:gravity="center"
-        android:padding="20dp" />
-
-    <TextView
-        android:id="@+id/ptime_r"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:gravity="center"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:text="MC"
-        android:textSize="10sp" />
+        android:layout_gravity="right"
+        android:background="@drawable/bubble_r"
+        android:orientation="vertical" >
+
+        <ImageView
+            android:id="@+id/picture_r"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:gravity="center" />
+
+        <TextView
+            android:id="@+id/ptime_r"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="0dp"
+            android:gravity="center"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="MC"
+            android:textSize="10sp" />
+    </LinearLayout>
 
 </LinearLayout>
