--- a/res/layout/activity_mc.xml
+++ b/res/layout/activity_mc.xml
@@ -54,7 +54,7 @@
                 android:layout_margin="5dp"
                 android:background="@drawable/newusr"
                 android:onClick="onClick_send"
-                android:text="发送"
+                android:text="@string/send"
                 android:textColor="#1e90ff" />
 
             <EditText
